hopefully fixed wrap bug on mobile

--- a/src/components/Thumbnails/ThumbnailSlider.module.css
+++ b/src/components/Thumbnails/ThumbnailSlider.module.css
@@ -1,5 +1,4 @@
 .container {
-  transition: top 0.2s cubic-bezier(0.4, 0, 0.2, 1);
   height: 606px;
   max-height: 606px;
 }
